--- a/main.css
+++ b/main.css
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  font-family: Lato;
+}
+
+.desktop-toptag {
+  background-color: #3E3E3E;
+}
+
+.head-qout{
+  background: #d3d3d3;
 }
