Add structure layout for index and about page

--- a/style/main.css
+++ b/style/main.css
@@ -10,6 +10,10 @@
   background-color: #3E3E3E;
 }
 
-.head-qout{
+.head-qout {
   background: #d3d3d3;
+}
+
+.programs {
+  background-color: #3E3E3E;
 }
