Add final design styling and html elements

--- a/style/about.css
+++ b/style/about.css
@@ -13,3 +13,18 @@
 .programs {
   background-color: #3E3E3E;
 }
+
+@media (min-width: 768px) {
+  .footer {
+    background: #272a31;
+  }
+
+  .hr {
+  display:block;
+  width: 100%;               
+  }
+
+  .main-program {
+  height: 500px;
+  }
+}
