--- a/style/about.css
+++ b/style/about.css
@@ -1,17 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
 * {
   margin: 0;
   padding: 0;
-  font-family: Lato;
 }
 
 .desktop-toptag {
-  background-color: #3E3E3E;
+  background-color: #3e3e3e;
 }
 
 .programs {
-  background-color: #3E3E3E;
+  background-color: #3e3e3e;
+}
+
+.mob-nav-container {
+  height: 100vh;
+  width: 100%;
+  display: none;
+  margin-top: 10%;
+}
+
+#menu2 {
+  display: none;
+}
+
+.mob-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  row-gap: 22px;
 }
 
 @media (min-width: 768px) {
@@ -20,11 +35,11 @@
   }
 
   .hr {
-  display:block;
-  width: 100%;               
+    display: block;
+    width: 100%;
   }
 
   .main-program {
-  height: 500px;
+    height: 500px;
   }
 }
