--- a/style/main.css
+++ b/style/main.css
@@ -1,13 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
 * {
   margin: 0;
   padding: 0;
-  font-family: Lato;
 }
 
 .desktop-toptag {
-  background-color: #3E3E3E;
+  background-color: #3e3e3e;
 }
 
 .head-qout {
@@ -15,11 +12,33 @@
 }
 
 .programs {
-  background-color: #3E3E3E;
+  background-color: #3e3e3e;
 }
 
 .speaker {
   background-size: 60px;
+}
+
+.mob-nav-container {
+  height: 100vh;
+  width: 100%;
+  display: none;
+  margin-top: 10%;
+}
+
+#menu2 {
+  display: none;
+}
+
+.mob-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  row-gap: 22px;
+}
+
+.head-sub {
+  color: #272a31;
 }
 
 @media (min-width: 768px) {
@@ -29,6 +48,10 @@
   }
 
   .main-program {
-    hieght: 500px;
+    height: 500px;
+  }
+
+  .head-sub {
+    color: #272a31;
   }
 }
